add personagem homem de ferro, e refatorado css e html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 
 <body>
+    <div class="container">
+        <img class="fundo" src="assets/avengers-endgame-uhdpaper.com-8K-131.jpg" alt="">
+        <img class="homem_ferro" src="assets/Homem_de_Ferro.png" alt="">
+    </div>
+    <div class="container_titulo">
+        <img class="titulo" src="assets/pngwing.com.png" alt="">
 
-    <img class="fundo" src="assets/avengers-endgame-uhdpaper.com-8K-131.jpg" alt="">
+    </div>
 
-    <img class="titulo" src="assets/pngwing.com.png" alt="">
+
 
 </body>
 
