add: animacao nos personagens, e adicção de mais um personagem

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <img class="fundo" src="assets/avengers-endgame-uhdpaper.com-8K-131.jpg" alt="">
         <img class="homem_ferro" src="assets/Homem_de_Ferro.png" alt="">
+        <img class="capitao_america" src="assets/capitao_america.png" alt="">
     </div>
     <div class="container_titulo">
         <img class="titulo" src="assets/pngwing.com.png" alt="">
-
     </div>
 
 
