alterado animações dos personagens

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 
 <body>
-    <div class="container">
-        <img class="fundo" src="assets/avengers-endgame-uhdpaper.com-8K-131.jpg" alt="">
-        <img class="homem_ferro" src="assets/Homem_de_Ferro.png" alt="">
-        <img class="capitao_america" src="assets/capitao_america.png" alt="">
+    <div class="container_personanagens">
+        <img class="capitao_america" src="./assets/capitao_americaa.png" alt="">
+        <img class="homem_ferro" src="assets/homem_ferro.png" alt="">
+    </div>
+
+    <div class="container_homem_aranha">
+        <img class="homem_aranha" src="assets/homem_aranha.png" alt="">
     </div>
     <div class="container_titulo">
         <img class="titulo" src="assets/pngwing.com.png" alt="">
+        <h2 class="data_lancamento"> 09/01/2024</h2>
     </div>
-
 
 
 </body>
