add: animação na data de lançamento, refatorado o restante do código

--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
 </head>
 
 <body>
-    <div class="container_personanagens">
-        <img class="capitao_america" src="./assets/capitao_americaa.png" alt="">
-        <img class="homem_ferro" src="assets/homem_ferro.png" alt="">
+    <div class="titulos">
+        <span class="data_lancamento">Lançamento: 09/01/2024</span>
+        <img class="titulo" src="assets/pngwing.com.png" alt="Título do filme">
+        <img class="homem_aranha" src="assets/homem_aranha.png" alt="Homem Aranha">
     </div>
+   
+    <div class="container">
+        <img class="capitao_america" src="./assets/capitao_americaa.png" alt="Capitão America">
+        <img class="homem_ferro" src="assets/homem_ferro.png" alt="Homem de Ferro">
 
-    <div class="container_homem_aranha">
-        <img class="homem_aranha" src="assets/homem_aranha.png" alt="">
     </div>
-    <div class="container_titulo">
-        <img class="titulo" src="assets/pngwing.com.png" alt="">
-        <h2 class="data_lancamento"> 09/01/2024</h2>
-    </div>
-
-
 </body>
 
 </html>
