--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <div class="titulos">
+    <div class="container_cabecalho">
         <span class="data_lancamento">Lançamento: 09/01/2024</span>
         <img class="titulo" src="assets/pngwing.com.png" alt="Título do filme">
         <img class="homem_aranha" src="assets/homem_aranha.png" alt="Homem Aranha">
     </div>
    
-    <div class="container">
+    <div class="container_rodape">
         <img class="capitao_america" src="./assets/capitao_americaa.png" alt="Capitão America">
         <img class="homem_ferro" src="assets/homem_ferro.png" alt="Homem de Ferro">
 
