ajustado animação da data lançamento, capitao america e homem de ferro.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container_cabecalho">
-        <span class="data_lancamento">Lançamento: 09/01/2024</span>
+        <span class="data_lancamento">Em breve 09.02.2024</span>
         <img class="titulo" src="assets/pngwing.com.png" alt="Título do filme">
         <img class="homem_aranha" src="assets/homem_aranha.png" alt="Homem Aranha">
     </div>
